[package]
name = "http-404"
version = "1.3.1"
edition = "2021"

[dependencies]
async-signals = { version = "0.4" }
async-std = { version = "1.12", features = ["attributes"] }
smallvec = { version = "1.10" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "http-404"
path = "src/main.rs"
